2004-12-07  Don Porter  <dgp@users.sourceforge.net>

	* tests/canvPs.test:	Cleaned up the matching of [makeFile] and
	* tests/choosedir.test: [removeFile] commands as indicated by the
	* tests/filebox.test:	results of a -debug 1 run of the test suite.
	* tests/imgPPM.test:	Tk test suite is now -debug 1 clean.  This
	* tests/imgPhoto.test:	completes fixing [1078648].
	* tests/listbox.test:
	* tests/main.test:

2004-12-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/bind.test, tests/button.test, tests/canvas.test:
	* tests/cursor.test, tests/scrollbar.test:
	Eliminate all duplicate test names. [Bug 1078648 again]

2004-12-06  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.5a2 TAGGED FOR RELEASE ***

2004-12-06  Don Porter  <dgp@users.sourceforge.net>

	* tests/safe.test:	Trim auto_path to improve performance [1080039]

2004-12-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* changes: updated for 8.5a2 release

2004-12-04  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/*.test: Resolve duplicate test names. [Bug 1078648]

2004-12-03  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgPhoto.c (Tk_PhotoPutBlock, Tk_PhotoPutZoomedBlock):
	Make overlay compositing where the target is empty no longer set
	the target to magical gray, and also make sure that the
	complex-alpha flag is toggled when necessary. [Patch 848161]

2004-12-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixButton.c (TkpDisplayButton): constrain coords to
	Tk_RedrawImage to display only portion that is valid.
	* generic/tkImgPhoto.c (ImgPhotoDisplay): add X error suppression
	around XGetImage to prevent app abort. [Bug 979239]

2004-11-28  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixRFont.c(Tk_DrawChars): Check for short integer overflow
	in x,y coordinates [Fixes: #942320 "Tk, Xft, text and long lines"]

2004-11-26  David Gravereaux  <davygrvy@pobox.com>

	* win/makefile.vc: Shell targets needed more stack space.
	[Bug 1066755]
